# scikit-build-core-vcpkg-dev

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
molpy/: pyproject.toml
molpy/molcpp/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
molpy/molcpp/include/: space.hpp
molpy/molcpp/src/: space.cpp
